Squashed commit of the following:
commit 94aa8976234a019266782038273f47df849cbb29
Author: Taras <partarstu@gmail.com>
Date:   Sat Jan 31 13:56:32 2026 +0100

    Prompt enhancements

commit 6add8a56fb382b54b079c54d8fe77788307395b1
Author: Taras <partarstu@gmail.com>
Date:   Fri Jan 30 21:29:45 2026 +0100

    Fix

commit bb298357cf4caa07b353605e9c239ff6e7bc1f51
Author: Taras <partarstu@gmail.com>
Date:   Fri Jan 30 16:48:24 2026 +0100

    Deployment optimization

commit 3831e38b6b408b5a16eec39c680b0d8edbc335a9
Author: Taras <partarstu@gmail.com>
Date:   Fri Jan 30 16:35:20 2026 +0100

    Some adaptations

commit 3a8eb823fe07c068121edbd32e9ea12311a77213
Author: Taras <partarstu@gmail.com>
Date:   Thu Jan 29 23:43:56 2026 +0100

    test

commit a7c2b00f9165009db985e1dfcec159626869f9dc
Author: Taras <partarstu@gmail.com>
Date:   Thu Jan 29 21:48:04 2026 +0100

    Other fixes

commit b8e8c875f4d9015846c9a93122b698425772467a
Author: Taras <partarstu@gmail.com>
Date:   Wed Jan 28 11:28:10 2026 +0100

    Fixed embedding model

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,29 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 
 steps:
-  # Pull the external mcp-atlassian image from GitHub Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'pull', 'ghcr.io/sooperset/mcp-atlassian:0.11.12' ]
-
-  # Tag the external image for Google Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'tag', 'ghcr.io/sooperset/mcp-atlassian:0.11.12', 'gcr.io/$PROJECT_ID/mcp-atlassian:latest' ]
-
-  # Push the mcp-atlassian image to internal Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/$PROJECT_ID/mcp-atlassian:latest' ]
 
   # Build the base image
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'agentic-qa-base:latest', '-f', 'Dockerfile.base', '.' ]
-
-  # Build the embedding-service image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/embedding-service', '-f', 'services/embedding_service/Dockerfile', '.' ]
-
-  # Build the prompt-guard-service image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/prompt-guard-service', '-f', 'services/prompt_guard_service/Dockerfile', '.' ]
 
   # Build the orchestrator image
   - name: 'gcr.io/cloud-builders/docker'
@@ -75,14 +56,6 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'gcr.io/$PROJECT_ID/test-case-review-agent' ]
 
-  # Push the embedding-service image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/$PROJECT_ID/embedding-service' ]
-
-  # Push the prompt-guard-service image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/$PROJECT_ID/prompt-guard-service' ]
-
   # Push the incident-creation-agent image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'gcr.io/$PROJECT_ID/incident-creation-agent' ]
@@ -91,13 +64,20 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'gcr.io/$PROJECT_ID/jira-rag-agent' ]
 
-  # Deploy to Cloud Run jira-mcp-server
+  # Pull, tag, push, and deploy jira-mcp-server to Cloud Run (conditional)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         if [ "$_DEPLOY_ALL_SERVICES" = "true" ] || [ "$_DEPLOY_JIRA_MCP" = "true" ]; then
+          echo "Pulling mcp-atlassian image from GitHub Container Registry..."
+          docker pull ghcr.io/sooperset/mcp-atlassian:0.11.12 && \
+          echo "Tagging mcp-atlassian image for Google Container Registry..." && \
+          docker tag ghcr.io/sooperset/mcp-atlassian:0.11.12 gcr.io/$PROJECT_ID/mcp-atlassian:latest && \
+          echo "Pushing mcp-atlassian image to Container Registry..." && \
+          docker push gcr.io/$PROJECT_ID/mcp-atlassian:latest && \
+          echo "Deploying jira-mcp-server to Cloud Run..." && \
           gcloud beta run deploy jira-mcp-server \
             --image=gcr.io/$PROJECT_ID/mcp-atlassian:latest \
             --network=agent-network \
@@ -117,16 +97,21 @@ steps:
             --add-volume-mount=volume=jira-volume,mount-path=$_JIRA_MCP_SERVER_ATTACHMENTS_MOUNT_PATH \
             --concurrency=100
         else
-          echo "Skipping jira-mcp-server deployment (variable _DEPLOY_JIRA_MCP and _DEPLOY_ALL_SERVICES are not true)"
+          echo "Skipping jira-mcp-server pull/tag/push/deploy (variable _DEPLOY_JIRA_MCP and _DEPLOY_ALL_SERVICES are not true)"
         fi
 
-  # Deploy to Cloud Run embedding-service
+  # Build, push, and deploy embedding-service to Cloud Run (conditional)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         if [ "$_DEPLOY_ALL_SERVICES" = "true" ] || [ "$_DEPLOY_EMBEDDING_SERVICE" = "true" ]; then
+          echo "Building embedding-service image..."
+          docker build -t gcr.io/$PROJECT_ID/embedding-service -f services/embedding_service/Dockerfile . && \
+          echo "Pushing embedding-service image to Container Registry..." && \
+          docker push gcr.io/$PROJECT_ID/embedding-service && \
+          echo "Deploying embedding-service to Cloud Run..." && \
           gcloud beta run deploy embedding-service \
             --image=gcr.io/$PROJECT_ID/embedding-service \
             --network=agent-network \
@@ -141,16 +126,21 @@ steps:
             --port=8080 \
             --concurrency=5
         else
-          echo "Skipping embedding-service deployment (variable _DEPLOY_EMBEDDING_SERVICE and _DEPLOY_ALL_SERVICES are not true)"
+          echo "Skipping embedding-service build/push/deploy (variable _DEPLOY_EMBEDDING_SERVICE and _DEPLOY_ALL_SERVICES are not true)"
         fi
 
-  # Deploy to Cloud Run prompt-guard-service
+  # Build, push, and deploy prompt-guard-service to Cloud Run (conditional)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         if [ "$_DEPLOY_ALL_SERVICES" = "true" ] || [ "$_DEPLOY_PROMPT_GUARD" = "true" ]; then
+          echo "Building prompt-guard-service image..."
+          docker build -t gcr.io/$PROJECT_ID/prompt-guard-service -f services/prompt_guard_service/Dockerfile . && \
+          echo "Pushing prompt-guard-service image to Container Registry..." && \
+          docker push gcr.io/$PROJECT_ID/prompt-guard-service && \
+          echo "Deploying prompt-guard-service to Cloud Run..." && \
           gcloud beta run deploy prompt-guard-service \
             --image=gcr.io/$PROJECT_ID/prompt-guard-service \
             --network=agent-network \
@@ -165,17 +155,18 @@ steps:
             --port=8080 \
             --concurrency=5
         else
-          echo "Skipping prompt-guard-service deployment (variable _DEPLOY_PROMPT_GUARD and _DEPLOY_ALL_SERVICES are not true)"
+          echo "Skipping prompt-guard-service build/push/deploy (variable _DEPLOY_PROMPT_GUARD and _DEPLOY_ALL_SERVICES are not true)"
         fi
 
 
-  # Deploy Qdrant Vector DB to Cloud Run
+  # Deploy Qdrant Vector DB to Cloud Run (conditional)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         if [ "$_DEPLOY_ALL_SERVICES" = "true" ] || [ "$_DEPLOY_QDRANT" = "true" ]; then
+          echo "Deploying qdrant-vector-db to Cloud Run..."
           gcloud beta run deploy qdrant-vector-db \
             --image=qdrant/qdrant:v1.16.3 \
             --network=agent-network \
@@ -402,8 +393,6 @@ images:
   - 'gcr.io/$PROJECT_ID/incident-creation-agent'
   - 'gcr.io/$PROJECT_ID/jira-rag-agent'
   - 'gcr.io/$PROJECT_ID/orchestrator'
-  - 'gcr.io/$PROJECT_ID/embedding-service'
-  - 'gcr.io/$PROJECT_ID/prompt-guard-service'
 
 options:
   logging: CLOUD_LOGGING_ONLY
